Fixed color contrast issues

--- a/source/styles/definitions.less
+++ b/source/styles/definitions.less
@@ -1,5 +1,5 @@
 @text-color: rgb(50, 50, 50);
-@leading-color: rgb(140, 190, 90);
+@leading-color: rgb(40, 120, 20);
 @background-color: rgb(240, 240, 240);
 
 @page-horizontal-margin: 10px;
@@ -10,6 +10,7 @@
 @testimonials-bubble-color: lighten(@background-color, 5%);
 
 @footer-text-color: darken(@background-color, 25%);
+@footer-leading-color: rgb(140, 190, 90);
 @footer-background-color: @text-color;
 
 .svg(@fill-color, @icon-size)
